--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "This is a restaurant page project with as main goal main goal to show the understanding of the benefits of modularized code as well as the ability to set up a JavaScript application made of different modules using Webpack.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
+    "watch": "webpack --watch"
   },
   "repository": {
     "type": "git",
